--- a/middleman-airbnb/data/users.yml
+++ b/middleman-airbnb/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Oscar Bonte'
+  github_nickname: 'oscarinh0'
+- name: 'André Bomfim'
+  github_nickname: 'alfbomfim'
